add top nav bar

--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <link rel="stylesheet" href="assets/font-awesome/css/font-awesome.min.css">
 </head>
 <body>
+    <div id="bar"></div>
     <div id="paper"></div>
 </body>
 <script src="js/bundle.js"></script>
